Add refs to TOC

--- a/ratek_resampler/ratek_resampler.tex
+++ b/ratek_resampler/ratek_resampler.tex
@@ -879,6 +879,7 @@ In this section the software used for the R\&D presented in this report is summa
 \label{table:scripts}
 \end{table}
 
+\addcontentsline{toc}{chapter}{References}
 \bibliographystyle{plain}
 \bibliography{ratek_references}
 \end{document}
