--- a/manifold/manifold_refs.bib
+++ b/manifold/manifold_refs.bib
@@ -8,6 +8,10 @@
   title = {{FreeDV-015 Codec 2 Rate K Resampler}},
   note = {\url{https://github.com/drowe67/misc/ratek_resampler/ratek_resampler.pdf}}
 }
+@misc{rowe2023_codec2,
+  title = {{Codec 2}},
+  note = {\url{https://github.com/drowe67/codec2/doc/codec2.pdf}}
+}
 @article{makhoul1985vector,
   title={Vector quantization in speech coding},
   author={Makhoul, John and Roucos, Salim and Gish, Herbert},
